--- a/src/app/pages/customer-management/customer-management.component.html
+++ b/src/app/pages/customer-management/customer-management.component.html
@@ -52,7 +52,8 @@
         <td class="text-center">{{ cloth.key }}</td>
         <td class="text-left">{{ cloth.firstName }} {{ cloth.lastName }}</td>
         <td class="text-left">
-          {{ cloth.address }} อ.{{ cloth.disTrict }} จ.{{ cloth.proVince }} {{ cloth.postalCode }}
+          {{ cloth.address }} อ.{{ cloth.disTrict }} จ.{{ cloth.proVince }}
+          {{ cloth.postalCode }}
         </td>
         <td class="text-center">{{ cloth.phoneNumber }}</td>
         <td class="text-left">{{ cloth.email }}</td>
@@ -92,7 +93,9 @@
     style="padding-left: 15%; padding-right: 15%"
   >
     <div class="field inline-block mx-1" style="width: 49%">
-      <label for="fname" class="block">ชื่อ</label>
+      <label for="fname" class="block"
+        >ชื่อ <span style="color: red">*</span></label
+      >
       <input
         id="fname"
         type="text"
@@ -102,7 +105,9 @@
       />
     </div>
     <div class="field inline-block" style="width: 50%">
-      <label for="lname" class="block">นามสกุล</label>
+      <label for="lname" class="block"
+        >นามสกุล <span style="color: red">*</span></label
+      >
       <input
         id="lname"
         type="text"
@@ -112,7 +117,9 @@
       />
     </div>
     <div class="field">
-      <label for="phone" class="block">เบอร์มือถือ</label>
+      <label for="phone" class="block"
+        >เบอร์มือถือ <span style="color: red">*</span></label
+      >
       <input
         id="phone"
         type="text"
@@ -122,7 +129,9 @@
       />
     </div>
     <div class="field">
-      <label for="address" class="block">ที่อยู่</label>
+      <label for="address" class="block"
+        >ที่อยู่ <span style="color: red">*</span></label
+      >
       <input
         id="address"
         type="text"
@@ -133,7 +142,7 @@
     </div>
 
     <div class="field inline-block my-1" style="width: 49%">
-      <label class="block">จังหวัด</label>
+      <label class="block">จังหวัด <span style="color: red">*</span></label>
       <p-dropdown
         [style]="{ width: '100%' }"
         [options]="provinces"
@@ -159,7 +168,7 @@
     </div>
 
     <div class="field inline-block my-1 mx-1" style="width: 50%">
-      <label class="block">อำเภอ</label>
+      <label class="block">อำเภอ <span style="color: red">*</span></label>
       <p-dropdown
         [style]="{ width: '100%' }"
         [disabled]="!provinceSelected"
@@ -186,7 +195,7 @@
     </div>
 
     <!-- <div class="field">
-      <label class="block">ตำบล</label>
+      <label class="block">ตำบล <span style="color:red">*</span></label>
       <p-dropdown
         [style]="{ width: '100%' }"
         [disabled]="!districtSelected"
@@ -215,7 +224,9 @@
     </div> -->
 
     <div class="field inline-block mt-3" style="width: 100%">
-      <label for="postAddress" class="block">รหัสไปรษณีย์</label>
+      <label for="postAddress" class="block"
+        >รหัสไปรษณีย์ <span style="color: red">*</span></label
+      >
       <input
         id="postAddress"
         type="postAddress"
@@ -226,7 +237,9 @@
     </div>
 
     <div class="field">
-      <label for="email" class="block">อีเมล</label>
+      <label for="email" class="block"
+        >อีเมล <span style="color: red">*</span></label
+      >
       <input
         id="email"
         type="email"
@@ -236,7 +249,9 @@
       />
     </div>
     <div class="field">
-      <label for="idCard" class="block">เลขบัตรประชาชน</label>
+      <label for="idCard" class="block"
+        >เลขบัตรประชาชน <span style="color: red">*</span></label
+      >
       <input
         id="idCard"
         type="text"
@@ -272,7 +287,9 @@
     style="padding-left: 15%; padding-right: 15%"
   >
     <div class="field inline-block mx-1" style="width: 49%">
-      <label for="fname" class="block">ชื่อ</label>
+      <label for="fname" class="block"
+        >ชื่อ <span style="color: red">*</span></label
+      >
       <input
         id="fname"
         type="text"
@@ -282,7 +299,9 @@
       />
     </div>
     <div class="field inline-block" style="width: 50%">
-      <label for="lname" class="block">นามสกุล</label>
+      <label for="lname" class="block"
+        >นามสกุล <span style="color: red">*</span></label
+      >
       <input
         id="lname"
         type="text"
@@ -292,7 +311,9 @@
       />
     </div>
     <div class="field">
-      <label for="phone" class="block">เบอร์มือถือ</label>
+      <label for="phone" class="block"
+        >เบอร์มือถือ <span style="color: red">*</span></label
+      >
       <input
         id="phone"
         type="text"
@@ -302,7 +323,9 @@
       />
     </div>
     <div class="field">
-      <label for="address" class="block">ที่อยู่</label>
+      <label for="address" class="block"
+        >ที่อยู่ <span style="color: red">*</span></label
+      >
       <input
         id="address"
         type="text"
@@ -313,7 +336,7 @@
     </div>
 
     <div class="field inline-block my-1" style="width: 49%">
-      <label class="block">จังหวัด</label>
+      <label class="block">จังหวัด <span style="color: red">*</span></label>
       <p-dropdown
         [style]="{ width: '100%' }"
         [options]="provinces"
@@ -339,7 +362,7 @@
     </div>
 
     <div class="field inline-block my-1 mx-1" style="width: 50%">
-      <label class="block">อำเภอ</label>
+      <label class="block">เขต/อำเภอ <span style="color: red">*</span></label>
       <p-dropdown
         [style]="{ width: '100%' }"
         [disabled]="!provinceSelected"
@@ -366,7 +389,7 @@
     </div>
 
     <!-- <div class="field">
-      <label class="block">ตำบล</label>
+      <label class="block">ตำบล <span style="color:red">*</span></label>
       <p-dropdown
         [style]="{ width: '100%' }"
         [disabled]="!districtSelected"
@@ -395,7 +418,9 @@
     </div> -->
 
     <div class="field inline-block mt-3" style="width: 100%">
-      <label for="postAddress" class="block">รหัสไปรษณีย์</label>
+      <label for="postAddress" class="block"
+        >รหัสไปรษณีย์ <span style="color: red">*</span></label
+      >
       <input
         id="postAddress"
         type="postAddress"
@@ -406,7 +431,9 @@
     </div>
 
     <div class="field">
-      <label for="email" class="block">อีเมล</label>
+      <label for="email" class="block"
+        >อีเมล <span style="color: red">*</span></label
+      >
       <input
         id="email"
         type="email"
@@ -416,7 +443,9 @@
       />
     </div>
     <div class="field">
-      <label for="idCard" class="block">เลขบัตรประชาชน</label>
+      <label for="idCard" class="block"
+        >เลขบัตรประชาชน <span style="color: red">*</span></label
+      >
       <input
         id="idCard"
         type="text"
@@ -426,7 +455,7 @@
       />
     </div>
     <!-- <div class="field">
-      <label for="line_id" class="block">@Line ID</label>
+      <label for="line_id" class="block">@Line ID <span style="color:red">*</span></label>
       <input
         id="line_id"
         type="text"
