--- a/src/app/pages/customer-management/customer-management.component.html
+++ b/src/app/pages/customer-management/customer-management.component.html
@@ -87,12 +87,25 @@
   header="เพิ่มข้อมูลลูกค้า"
   [(visible)]="newCustomerVisible"
   (onHide)="onResetValue()"
+  [style]="{width: '50vw'}"
 >
   <div
     class="container-add-texture"
-    style="padding-left: 15%; padding-right: 15%"
+    style="padding-left: 15%; padding-right: 15% ;"
   >
-    <div class="field inline-block mx-1" style="width: 49%">
+  <div class="field" style="width: 50%">
+    <label for="idCard" class="block"
+      >เลขบัตรประชาชน <span style="color: red">*</span></label
+    >
+    <input
+      id="idCard"
+      type="text"
+      pInputText
+      [(ngModel)]="idCard"
+      placeholder="โปรดระบุเลขบัตรประชาชน"
+    />
+  </div>
+    <div class="field inline-block mx-1" style="width: 50%">
       <label for="fname" class="block"
         >ชื่อ <span style="color: red">*</span></label
       >
@@ -116,10 +129,10 @@
         placeholder="โปรดระบุนามสกุล"
       />
     </div>
-    <div class="field">
-      <label for="phone" class="block"
-        >เบอร์มือถือ <span style="color: red">*</span></label
-      >
+    <div class="field" style="width: 50%;">
+      <label for="phone" class="block">
+        เบอร์มือถือ
+      </label>
       <input
         id="phone"
         type="text"
@@ -128,10 +141,10 @@
         placeholder="โปรดระบุเบอร์มือถือ"
       />
     </div>
-    <div class="field">
-      <label for="address" class="block"
-        >ที่อยู่ <span style="color: red">*</span></label
-      >
+    <div class="field inline-block my-1 mx-1" style="width: 50%;">
+      <label for="address" class="block">
+        ที่อยู่
+      </label>
       <input
         id="address"
         type="text"
@@ -140,62 +153,8 @@
         placeholder="โปรดระบุที่อยู่"
       />
     </div>
-
-    <div class="field inline-block my-1" style="width: 49%">
-      <label class="block">จังหวัด <span style="color: red">*</span></label>
-      <p-dropdown
-        [style]="{ width: '100%' }"
-        [options]="provinces"
-        [(ngModel)]="provinceSelected"
-        optionLabel="name"
-        [filter]="true"
-        filterBy="name"
-        [showClear]="false"
-        placeholder="โปรดเลือก"
-        (onChange)="onSelectedProvince()"
-      >
-        <ng-template pTemplate="selectedItem">
-          <div class="country-item country-item-value" *ngIf="provinceSelected">
-            <div>{{ provinceSelected.name }}</div>
-          </div>
-        </ng-template>
-        <ng-template let-country pTemplate="item">
-          <div class="country-item">
-            <div>{{ country.name }}</div>
-          </div>
-        </ng-template>
-      </p-dropdown>
-    </div>
-
-    <div class="field inline-block my-1 mx-1" style="width: 50%">
-      <label class="block">อำเภอ <span style="color: red">*</span></label>
-      <p-dropdown
-        [style]="{ width: '100%' }"
-        [disabled]="!provinceSelected"
-        [options]="districts"
-        [(ngModel)]="districtSelected"
-        optionLabel="name"
-        [filter]="true"
-        filterBy="name"
-        [showClear]="false"
-        (onChange)="onSelectedDistrict()"
-        placeholder="โปรดเลือก"
-      >
-        <ng-template pTemplate="selectedItem">
-          <div class="country-item country-item-value" *ngIf="districtSelected">
-            <div>{{ districtSelected.name }}</div>
-          </div>
-        </ng-template>
-        <ng-template let-country pTemplate="item">
-          <div class="country-item">
-            <div>{{ country.name }}</div>
-          </div>
-        </ng-template>
-      </p-dropdown>
-    </div>
-
-    <!-- <div class="field">
-      <label class="block">ตำบล <span style="color:red">*</span></label>
+    <div class="field inline-block my-1 " style="width: 175%;">
+      <label class="block">แขวง/ตำบล</label>
       <p-dropdown
         [style]="{ width: '100%' }"
         [disabled]="!districtSelected"
@@ -221,12 +180,70 @@
           </div>
         </ng-template>
       </p-dropdown>
-    </div> -->
+    </div>
+    
 
-    <div class="field inline-block mt-3" style="width: 100%">
-      <label for="postAddress" class="block"
-        >รหัสไปรษณีย์ <span style="color: red">*</span></label
+    <div class="field inline-block my-1 mx-1" style="width: 175%;">
+      <label class="block">
+        เขต/อำเภอ
+      </label>
+      <p-dropdown
+        [style]="{ width: '100%' }"
+        [disabled]="!provinceSelected"
+        [options]="districts"
+        [(ngModel)]="districtSelected"
+        optionLabel="name"
+        [filter]="true"
+        filterBy="name"
+        [showClear]="false"
+        (onChange)="onSelectedDistrict()"
+        placeholder="โปรดเลือก"
       >
+        <ng-template pTemplate="selectedItem">
+          <div class="country-item country-item-value" *ngIf="districtSelected">
+            <div>{{ districtSelected.name }}</div>
+          </div>
+        </ng-template>
+        <ng-template let-country pTemplate="item">
+          <div class="country-item">
+            <div>{{ country.name }}</div>
+          </div>
+        </ng-template>
+      </p-dropdown>
+    </div>
+
+    <div class="field inline-block my-1 mx-1" style="width: 175%;">
+      <label class="block">
+        จังหวัด
+      </label>
+      <p-dropdown
+        [style]="{ width: '100%' }"
+        [options]="provinces"
+        [(ngModel)]="provinceSelected"
+        optionLabel="name"
+        [filter]="true"
+        filterBy="name"
+        [showClear]="false"
+        placeholder="โปรดเลือก"
+        (onChange)="onSelectedProvince()"
+      >
+        <ng-template pTemplate="selectedItem">
+          <div class="country-item country-item-value" *ngIf="provinceSelected">
+            <div>{{ provinceSelected.name }}</div>
+          </div>
+        </ng-template>
+        <ng-template let-country pTemplate="item">
+          <div class="country-item">
+            <div>{{ country.name }}</div>
+          </div>
+        </ng-template>
+      </p-dropdown>
+    </div>
+
+    <div class="field inline-block mt-3" style="width: 50%;">
+      <label for="postAddress" class="block">
+        รหัสไปรษณีย์
+      </label>
       <input
         id="postAddress"
         type="postAddress"
@@ -236,38 +253,27 @@
       />
     </div>
 
-    <div class="field">
-      <label for="email" class="block"
-        >อีเมล <span style="color: red">*</span></label
-      >
+    <div class="field" style="width: 50%;">
+      <label for="email" class="block">
+        อีเมล์
+      </label>
       <input
         id="email"
-        type="email"
-        pInputText
-        [(ngModel)]="email"
-        placeholder="โปรดระบุอีเมล"
-      />
-    </div>
-    <div class="field">
-      <label for="idCard" class="block"
-        >เลขบัตรประชาชน <span style="color: red">*</span></label
-      >
-      <input
-        id="idCard"
         type="text"
         pInputText
-        [(ngModel)]="idCard"
-        placeholder="โปรดระบุเลขบัตรประชาชน"
+        [(ngModel)]="email"
+        placeholder="โปรดระบุอีเมล์"
       />
     </div>
-    <div class="flex justify-content-end">
+    <div class="col-12 justify-content-end">
       <button
         pButton
         pRipple
-        class="p-button-success p-button-raised"
+        class="p-button-success "
         label="เพิ่ม"
         icon="fas fa-plus"
         style="margin-top: 1rem"
+        [style]="{ width: '100px','float':'right' }"
         (click)="onNewCustomer()"
       ></button>
     </div>
@@ -280,13 +286,26 @@
   [draggable]="false"
   header="แก้ไขข้อมูลลูกค้า"
   [(visible)]="editCustomerVisible"
+  [style]="{width: '50vw'}"
   (onHide)="onResetValue()"
 >
   <div
     class="container-add-texture"
     style="padding-left: 15%; padding-right: 15%"
   >
-    <div class="field inline-block mx-1" style="width: 49%">
+  <div class="field" style="width: 50%">
+    <label for="idCard" class="block"
+      >เลขบัตรประชาชน <span style="color: red">*</span></label
+    >
+    <input
+      id="idCard"
+      type="text"
+      pInputText
+      [(ngModel)]="idCard"
+      placeholder="โปรดระบุเลขบัตรประชาชน"
+    />
+  </div>
+    <div class="field inline-block mx-1" style="width: 50%">
       <label for="fname" class="block"
         >ชื่อ <span style="color: red">*</span></label
       >
@@ -310,10 +329,10 @@
         placeholder="โปรดระบุนามสกุล"
       />
     </div>
-    <div class="field">
-      <label for="phone" class="block"
-        >เบอร์มือถือ <span style="color: red">*</span></label
-      >
+    <div class="field" style="width: 50%;">
+      <label for="phone" class="block">
+        เบอร์มือถือ
+      </label>
       <input
         id="phone"
         type="text"
@@ -322,10 +341,10 @@
         placeholder="โปรดระบุเบอร์มือถือ"
       />
     </div>
-    <div class="field">
-      <label for="address" class="block"
-        >ที่อยู่ <span style="color: red">*</span></label
-      >
+    <div class="field inline-block my-1 mx-1" style="width: 50%;">
+      <label for="address" class="block">
+        ที่อยู่
+      </label>
       <input
         id="address"
         type="text"
@@ -334,62 +353,8 @@
         placeholder="โปรดระบุที่อยู่"
       />
     </div>
-
-    <div class="field inline-block my-1" style="width: 49%">
-      <label class="block">จังหวัด <span style="color: red">*</span></label>
-      <p-dropdown
-        [style]="{ width: '100%' }"
-        [options]="provinces"
-        [(ngModel)]="provinceSelected"
-        optionLabel="name"
-        [filter]="true"
-        filterBy="name"
-        [showClear]="false"
-        placeholder="โปรดเลือก"
-        (onChange)="onSelectedProvince()"
-      >
-        <ng-template pTemplate="selectedItem">
-          <div class="country-item country-item-value" *ngIf="provinceSelected">
-            <div>{{ provinceSelected.name }}</div>
-          </div>
-        </ng-template>
-        <ng-template let-country pTemplate="item">
-          <div class="country-item">
-            <div>{{ country.name }}</div>
-          </div>
-        </ng-template>
-      </p-dropdown>
-    </div>
-
-    <div class="field inline-block my-1 mx-1" style="width: 50%">
-      <label class="block">เขต/อำเภอ <span style="color: red">*</span></label>
-      <p-dropdown
-        [style]="{ width: '100%' }"
-        [disabled]="!provinceSelected"
-        [options]="districts"
-        [(ngModel)]="districtSelected"
-        optionLabel="name"
-        [filter]="true"
-        filterBy="name"
-        [showClear]="false"
-        (onChange)="onSelectedDistrict()"
-        placeholder="โปรดเลือก"
-      >
-        <ng-template pTemplate="selectedItem">
-          <div class="country-item country-item-value" *ngIf="districtSelected">
-            <div>{{ districtSelected.name }}</div>
-          </div>
-        </ng-template>
-        <ng-template let-country pTemplate="item">
-          <div class="country-item">
-            <div>{{ country.name }}</div>
-          </div>
-        </ng-template>
-      </p-dropdown>
-    </div>
-
-    <!-- <div class="field">
-      <label class="block">ตำบล <span style="color:red">*</span></label>
+    <div class="field inline-block my-1 " style="width: 175%;">
+      <label class="block">แขวง/ตำบล</label>
       <p-dropdown
         [style]="{ width: '100%' }"
         [disabled]="!districtSelected"
@@ -415,12 +380,70 @@
           </div>
         </ng-template>
       </p-dropdown>
-    </div> -->
+    </div>
+    
 
-    <div class="field inline-block mt-3" style="width: 100%">
-      <label for="postAddress" class="block"
-        >รหัสไปรษณีย์ <span style="color: red">*</span></label
+    <div class="field inline-block my-1 mx-1" style="width: 175%;">
+      <label class="block">
+        เขต/อำเภอ
+      </label>
+      <p-dropdown
+        [style]="{ width: '100%' }"
+        [disabled]="!provinceSelected"
+        [options]="districts"
+        [(ngModel)]="districtSelected"
+        optionLabel="name"
+        [filter]="true"
+        filterBy="name"
+        [showClear]="false"
+        (onChange)="onSelectedDistrict()"
+        placeholder="โปรดเลือก"
       >
+        <ng-template pTemplate="selectedItem">
+          <div class="country-item country-item-value" *ngIf="districtSelected">
+            <div>{{ districtSelected.name }}</div>
+          </div>
+        </ng-template>
+        <ng-template let-country pTemplate="item">
+          <div class="country-item">
+            <div>{{ country.name }}</div>
+          </div>
+        </ng-template>
+      </p-dropdown>
+    </div>
+
+    <div class="field inline-block my-1 mx-1" style="width: 175%;">
+      <label class="block">
+        จังหวัด
+      </label>
+      <p-dropdown
+        [style]="{ width: '100%' }"
+        [options]="provinces"
+        [(ngModel)]="provinceSelected"
+        optionLabel="name"
+        [filter]="true"
+        filterBy="name"
+        [showClear]="false"
+        placeholder="โปรดเลือก"
+        (onChange)="onSelectedProvince()"
+      >
+        <ng-template pTemplate="selectedItem">
+          <div class="country-item country-item-value" *ngIf="provinceSelected">
+            <div>{{ provinceSelected.name }}</div>
+          </div>
+        </ng-template>
+        <ng-template let-country pTemplate="item">
+          <div class="country-item">
+            <div>{{ country.name }}</div>
+          </div>
+        </ng-template>
+      </p-dropdown>
+    </div>
+
+    <div class="field inline-block mt-3" style="width: 50%;">
+      <label for="postAddress" class="block">
+        รหัสไปรษณีย์
+      </label>
       <input
         id="postAddress"
         type="postAddress"
@@ -430,29 +453,29 @@
       />
     </div>
 
-    <div class="field">
-      <label for="email" class="block"
-        >อีเมล <span style="color: red">*</span></label
-      >
+    <div class="field" style="width: 50%;">
+      <label for="email" class="block">
+        อีเมล์
+      </label>
       <input
         id="email"
-        type="email"
-        pInputText
-        [(ngModel)]="email"
-        placeholder="โปรดระบุอีเมล"
-      />
-    </div>
-    <div class="field">
-      <label for="idCard" class="block"
-        >เลขบัตรประชาชน <span style="color: red">*</span></label
-      >
-      <input
-        id="idCard"
         type="text"
         pInputText
-        [(ngModel)]="idCard"
-        placeholder="โปรดระบุเลขบัตรประชาชน"
+        [(ngModel)]="email"
+        placeholder="โปรดระบุอีเมล์"
       />
+    </div>
+    <div class="col-12 justify-content-end">
+      <button
+        pButton
+        pRipple
+        class="p-button-success "
+        label="เพิ่ม"
+        icon="fas fa-plus"
+        style="margin-top: 1rem"
+        [style]="{ width: '100px','float':'right' }"
+        (click)="onNewCustomer()"
+      ></button>
     </div>
     <!-- <div class="field">
       <label for="line_id" class="block">@Line ID <span style="color:red">*</span></label>
@@ -465,17 +488,7 @@
         placeholder="โปรดระบุไลน์ไอดี"
       />
     </div> -->
-    <div class="flex justify-content-end">
-      <button
-        pButton
-        pRipple
-        class="p-button-success p-button-raised"
-        label="ยืนยัน"
-        icon="fas fa-plus"
-        style="margin-top: 1rem"
-        (click)="onEditCustomer()"
-      ></button>
-    </div>
+    
   </div>
 </p-dialog>
 
